@@ -6,9 +6,8 @@ import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 
-import javax.persistence.EntityManagerFactory;
+import jakarta.persistence.EntityManagerFactory;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 /**
@@ -57,7 +56,7 @@ public abstract class SldBaseService<S, T> implements SldService<S, T> {
   }
 
   protected List<T> updateBatchByExamples(final List<T> mergedFromData, final String mergedToPen) {
-    final List<T> mergedFromPenData = mergedFromData.stream().flatMap(data -> this.findExistingDataByDataMatcher(data).stream()).collect(Collectors.toList());
+    final List<T> mergedFromPenData = mergedFromData.stream().flatMap(data -> this.findExistingDataByDataMatcher(data).stream()).toList();
     return this.updateBatch(mergedFromPenData, mergedToPen);
   }
 
@@ -228,7 +227,7 @@ public abstract class SldBaseService<S, T> implements SldService<S, T> {
   private String findHighestPen(final Map<String, List<String>> penMap, final String key) {
     final List<String> penList = penMap.get(key).stream()
       .sorted(Comparator.reverseOrder())
-      .collect(Collectors.toList());
+      .toList();
     return penList.isEmpty() ? "" : penList.get(0);
   }
 
